--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@ $def with (form,mensaje)
 <div align="center" class="formulario">
 <h1>Registro temporal </h1>
 <h2>App LlaveGUI</h2>
+<a href="images/logo.png"><img src="images/logo.png" width="104" height="97"></a>
 <br><br>
 <form action="" method="post">
 $:form.render()
