Añadida web de gestión para saber todos los usuarios disponibles

--- a/templates/users.html
+++ b/templates/users.html
@@ -1,4 +1,15 @@
 $def with (users)
-
+<head>
+<title>Registro temporal AppGui</title>
+<link href = "style.css" rel = "stylesheet">
+</head>
+<body>
 $for user in users:
-	<p>$user.nick</p><br><br>
+	<div class="user">
+		<p class="name">$user.nick</p><br><br>
+		<div class="buttons">
+			
+		</div>
+	</div>
+	<hr>
+</body>
