--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,19 @@
 $def with (form,mensaje)
-<style type="text/css">
-.wrong {
-	font-family: courier, fixed, monospace;
-	color: #FF0000;
-}
-.formulario{
-	height: auto;
-	width: auto;
-	min-height: 315px;
-	min-width: 305px;
-	margin-top: 10%;
-	margin-left: 20%;
-	margin-right: 20%;
-	border: 1px solid black; 
-	border-radius: 10px;
-	box-shadow: 5px 5px 2px #888888;
-	background-color: #DBF4FC; 
-}
-</style>
-<div align="center" class="formulario">
-<h1>Registro temporal </h1>
-<h2>App LlaveGUI</h2>
-<a href="images/logo.png"><img src="images/logo.png" width="104" height="97"></a>
-<br><br>
-<form action="" method="post">
-$:form.render()
-</form>
-
-$if mensaje:
-	<p class="wrong">$:mensaje</p></div>
+<head>
+<title>Registro temporal AppGui</title>
+<link href = "style.css" rel = "stylesheet">
+</head>
+<body>
+	<div align="center" class="formulario">
+		<h1>Registro temporal </h1>
+		<h2>App LlaveGUI</h2>
+		<a href="images/logo.png"><img src="images/logo.png" width="104" height="97"></a>
+		<br><br>
+		<form action="" method="post">
+		$:form.render()
+		</form>
+		
+		$if mensaje:
+			<p class="wrong">$:mensaje</p>
+	</div>
+</body>
