Documentación y servicio a pagina web externa para gestión de la api

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@ $def with (content)
 <html>
 <head>
     <title>$content.title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 </head>
 
 <body>
