--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 $def with (form,mensaje)
 <head>
 <title>Registro temporal AppGui</title>
-<link href = "style.css" rel = "stylesheet">
+<link href = "./css/style.css" rel = "stylesheet">
+<link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
 	<div align="center" class="formulario">
